# num-criterion

./: Cargo.toml  README.md  results.m1.smallvec.txt  results.m1.vec.txt
benches/: bigint.rs  bigrational.rs  factorial.rs  gcd.rs  roots.rs  shootout.rs
