[package]
description = "Criterion benchmarks for the num crates"
#keywords = ["mathematics", "numerics", "bignum"]
#categories = [ "algorithms", "data-structures", "science" ]
license     = "MIT OR Apache-2.0"
name        = "num-criterion"
repository  = "https://github.com/Lemmih/num-criterion"
version     = "0.1.0"
readme      = "README.md"
exclude     = ["/.github/*"]
edition     = "2018"
autobenches = false

[[bench]]
harness = false
name    = "bigint"

[[bench]]
harness = false
name    = "bigrational"

[[bench]]
harness = false
name    = "factorial"

[[bench]]
harness = false
name    = "gcd"

[[bench]]
harness = false
name    = "roots"

[[bench]]
harness = false
name    = "shootout"

[dependencies]
ramp = {version = "0.6.0", optional = true }
rug = {version = "1.12.0", optional = true, features = ["rand"] }
uint = "0.9.1"

[dependencies.num-integer]
version  = "0.1.44"
features = ["i128"]

[dependencies.num-bigint]
version  = "0.4.0"
features = ["rand"]

[dependencies.num-rational]
version = "0.4.0"
#git     = "https://github.com/Lemmih/num-rational"
#branch  = "fewer-clones"

[dependencies.num-traits]
version  = "0.2.14"
features = ["i128"]

[dependencies.rand]
version          = "0.8.4"
default-features = false

[dev-dependencies]
criterion = "0.3"
