[package]
description = "Criterion benchmarks for the num crates"
#keywords = ["mathematics", "numerics", "bignum"]
#categories = [ "algorithms", "data-structures", "science" ]
license     = "MIT OR Apache-2.0"
name        = "num-criterion"
repository  = "https://github.com/Lemmih/num-criterion"
version     = "0.1.0"
readme      = "README.md"
exclude     = ["/.github/*"]
edition     = "2018"
autobenches = false

[[bench]]
harness = false
name    = "bigint"

[[bench]]
harness = false
name    = "bigrational"

[[bench]]
harness = false
name    = "factorial"

[[bench]]
harness = false
name    = "gcd"

[[bench]]
harness = false
name    = "roots"

[[bench]]
harness = false
name    = "shootout"

[features]
default = []

[dependencies]
serde_json   = "1.0.64"
ramp         = { version = "0.7.0", optional = true }
rug          = { version = "1.17.0", optional = true, features = ["rand"] }
ibig         = { version = "0.3.5", optional = true }
uint         = { version = "0.9.3", optional = true }
malachite-nz = { version = "0.2.6", optional = true }
dashu        = { version = "0.2", optional = true }

[dependencies.num-integer]
version  = "0.1.45"
features = ["i128"]

[dependencies.num-bigint]
version  = "0.4.3"
features = ["rand"]

[dependencies.num-rational]
version = "0.4.1"

[dependencies.num-traits]
version  = "0.2.15"
features = ["i128"]

[dependencies.rand]
version          = "0.8.5"
default-features = false

[dev-dependencies]
criterion = "0.4"
